<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cash_in_background"
    android:id="@+id/layoutId">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/cash_in_header">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_profile"
            android:gravity="right"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/get_cash_header"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/get_my_money"
                android:textSize="32sp"
                android:textColor="@color/text_color_profile"
                 />
            <ImageButton
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cropToPadding="false"

                android:id="@+id/picture_profile"
                android:background="@null"
                android:layout_gravity="center_vertical"

                android:src="@drawable/cash_in_hello"
                android:adjustViewBounds="false" />

            <ImageButton


                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cropToPadding="false"


                android:id="@+id/back"
                android:background="@null"
                android:layout_alignRight="@+id/menu_profile"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back_btn"
                android:adjustViewBounds="false" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/contact_me"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="@color/cash_in_background_of_button"
        android:text="@string/contact_me_about_money"
        />
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"


        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_me_btn_cashin"
            android:text="@string/send_me_money"
            android:textSize="20dp"
            android:textColor="@color/cash_in_background"
            android:background="@drawable/send_me_btn_cashin"
            android:layout_gravity="center_horizontal" />



    </RelativeLayout>

    <TextView
        android:id="@+id/cash_now_in_bill"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/in_your_account"
        android:textSize="32sp"
        android:textColor="@color/text_color_profile"
        android:gravity="center" />

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >


        <TextView
            android:id="@+id/cash_now_in_shekel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/coin"
            android:textSize="32sp"
            android:textColor="@color/text_color_profile"
            android:gravity="center" />
        <TextView
            android:id="@+id/cash_now_in_bill_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/optional_sum"
            android:textSize="32sp"
            android:textColor="@color/text_color_profile"
            android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>


</LinearLayout>