<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    android:id="@+id/layoutId">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/up_menu_profile">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_profile"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/user"
                android:id="@+id/user_name"
                android:textSize="32sp"
                android:textColor="@color/text_color_profile"
                android:layout_gravity="center_horizontal" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/hello"
                android:id="@+id/hello"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:textSize="32sp"
                android:textColor="@color/text_color_profile"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>
    </RelativeLayout>

    <ScrollView

        android:layout_width="fill_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_height="match_parent"
        android:measureAllChildren="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:longClickable="false"
            android:measureWithLargestChild="false">

            <Button
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:drawableRight="@drawable/select_sound_hello"
                android:drawableLeft="@drawable/arrow_hello"
                android:text="@string/choose_ring_hello"
                android:ems="10"
                android:textSize="26sp"
                android:id="@+id/choose_ring"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/grey_bg"
                android:gravity="right" />


            <Button
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:drawableRight="@drawable/bill_state_hello"
                android:drawableLeft="@drawable/arrow_hello"
                android:text="@string/account_status_hello"
                android:ems="10"
                android:textSize="26sp"
                android:id="@+id/account_status"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/grey_bg"
                android:gravity="right" />



            <Button
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:drawableRight="@drawable/cash_in_hello"
                android:drawableLeft="@drawable/arrow_hello"
                android:text="@string/get_my_money_hello"
                android:ems="10"
                android:textSize="26sp"
                android:id="@+id/get_my_money"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/grey_bg"
                android:gravity="right" />


            <Button
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:drawableRight="@drawable/profile_hello"
                android:drawableLeft="@drawable/arrow_hello"
                android:text="@string/profile_hello"
                android:ems="10"
                android:textSize="26sp"
                android:id="@+id/profile"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/grey_bg"
                android:gravity="right" />


            <Button
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:drawableRight="@drawable/cupon_hello"
                android:drawableLeft="@drawable/arrow_hello"
                android:text="@string/coupon_hello"
                android:ems="10"
                android:textSize="26sp"
                android:id="@+id/coupon"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/grey_bg"
                android:gravity="right" />



        </LinearLayout>

    </ScrollView>
</LinearLayout>