<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bill_background"
    android:id="@+id/layoutId">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bill_header">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_profile"
            android:gravity="right"
            android:orientation="horizontal">
            <TextView
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/account_status"
                android:textSize="32sp"
                android:textColor="@color/text_color_profile"
            />
            <ImageButton
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cropToPadding="false"

                android:id="@+id/picture_profile"
                android:background="@null"
                android:layout_gravity="center_vertical"

                android:src="@drawable/profile_icon"
                android:adjustViewBounds="false" />

            <ImageButton

                android:paddingRight="10dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cropToPadding="false"

                android:id="@+id/back"
                android:background="@null"
                android:layout_alignRight="@+id/menu_profile"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back_btn"
                android:adjustViewBounds="false" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/in_your_account"
                android:textSize="32sp"
                android:textColor="@color/text_color_profile"
                android:gravity="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/coin"
                    android:textSize="32sp"
                    android:textColor="@color/text_color_profile"
                    android:gravity="center" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/optional_sum"
                    android:textSize="32sp"
                    android:textColor="@color/text_color_profile"
                    android:gravity="center" />

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cropToPadding="false"
                android:id="@+id/get_money_now"
               android:text="@string/get_my_money"
                android:textSize="12dp"

                android:textColor="@color/text_color_profile"
                android:background="@drawable/cash_bill_state"

                android:adjustViewBounds="false"

                android:layout_gravity="center_horizontal" />
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/line_rings"

                android:layout_alignParentBottom="true"
                />
            <TextView

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/all_profit"
                android:textSize="32sp"
                android:textColor="@color/text_color_profile"
                android:gravity="center" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/coin"
                    android:textSize="32sp"
                    android:textColor="@color/text_color_profile"
                    android:gravity="center" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/optional_sum"
                    android:textSize="32sp"
                    android:textColor="@color/text_color_profile"
                    android:gravity="center" />

            </LinearLayout>
            </LinearLayout>


       </RelativeLayout>



</LinearLayout>